@@ -21,6 +21,7 @@ Testing/
 *.a
 
 # resulting binaries
+init/device-timeout-generator
 kdumptool/kdumptool
 kdumptool/testcanonical
 kdumptool/testconfig
